--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 </ul>
 <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 <h2>You wanna join the coding study</h2>
-<form class="simple-form" action="index.html" method="post">
-  <label for="username">Username</label>
-  <input type="text" name="username" id="">
-  <label for="email">Email</label>
-  <input type="text" name="Email" id="">
-  <label for="password">Password</label>
-  <input type="password" name="password" id="">
-</form>
+<div class="simple-form">
+  <form  action="index.html" method="post">
+    <label for="username">Username</label>
+    <input type="text" name="username" id="">
+    <label for="email">Email</label>
+    <input type="text" name="Email" id="">
+    <label for="password">Password</label>
+    <input type="password" name="password" id="">
+  </form>
+</div>
 </body>
 </html>
